--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.20MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-159.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-5.76MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-224.0KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-362.7KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.76MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.91MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 未知国家-5.59MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-643.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-911.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-381.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-308.3KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 未知国家-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-643.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-911.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
