--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-514.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.70MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-381.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-308.3KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 未知国家-5.51MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
   - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-513.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-542.1KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-275.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇮🇳 印度-3.18MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.70MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇭🇰 香港-336.8KB/s(Youtube:不良林), server: 148.66.56.99, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-514.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.3KB/s(Youtube:不良林)
+      - 未知国家-5.51MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-275.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
